Fixed formatting issue on summary page, vmc not showing on print page, and extra blank page printing

--- a/css/print.css
+++ b/css/print.css
@@ -31,7 +31,6 @@ body { margin: 0;
     overflow: hidden;
     position: relative;
     box-sizing: border-box;
-    page-break-after: always;
 }
 
 .sheet-outer.letter .sheet { 
